# rustle

./: .gitignore  Cargo.toml  README.md  algorithms.yaml  databases.yaml  datasets.yaml  flake.nix  tests.yaml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: args.rs  bootstrap.rs  build.rs  main.rs
cli/src/handlers/: algorithm.rs  config.rs  dataset.rs  mod.rs  test.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/db/: algorithm.rs  algorithm_run.rs  dataset.rs  iteration.rs  metric.rs  odometry.rs  test_definition.rs  test_execution.rs
core/src/models/: algorithm_run.rs  container.rs  iteration.rs
core/src/models/metrics/: cpu.rs  metric.rs  pose_error.rs
core/src/models/ros/: odometry.rs  pose.rs  ros_msg.rs  twist.rs
core/src/models/test_definitions/: cut.rs  degradation.rs  drop.rs  simple.rs
core/src/services/: algorithm.rs  algorithm_run.rs  container.rs  dataset.rs  error.rs  iteration.rs  metrics.rs  ros.rs  stat.rs  test_definition.rs  test_execution.rs
core/src/utils/: config.rs  mod.rs  plots.rs
docker/Point-LIO/: Dockerfile  rustle.launch
docker/a-loam/: Dockerfile  rustle.launch
docker/dlio/: Dockerfile  rustle.launch
docker/dlo/: Dockerfile  rustle.launch
docker/fast-lio/: Dockerfile  rustle.launch
docker/faster-lio/: Dockerfile  rustle.launch
docker/iG-LIO/: Dockerfile  rustle.launch
docker/ig-lio/: Dockerfile  rustle.launch
docker/lio-sam/: Dockerfile  entrypoint.sh  rustle.launch
docker/lio-sam-6axis/: Dockerfile  rustle.launch
docker/lvi-sam/: Dockerfile  rustle.launch
docker/mars/: Dockerfile
docker/point-lio/: rustle.launch
docker/robot-localization/: Dockerfile  entrypoint.sh  rustle.launch
docker/sr-livo/: Dockerfile  rustle.launch
src/: config.rs  db.rs  errors.rs  evo_wrapper.rs  lib.rs  main.rs  metrics.rs  ros_msgs.rs  speed_task.rs  task.rs  test_execution.rs
src/db/: algorithm.rs  algorithm_run.rs  container.rs  dataset.rs  iteration.rs  metric.rs  mod.rs  odometry.rs  stat.rs  test_definition.rs  test_execution.rs
src/models/: algorithm.rs  algorithm_run.rs  dataset.rs  iteration.rs  metric.rs  mod.rs  stat.rs  test_definition.rs  test_execution.rs
src/models/metrics/: cpu.rs  memory.rs  metric.rs  mod.rs  pose_error.rs
src/models/ros/: error.rs  header.rs  mod.rs  msg.rs  odometry.rs  path.rs  ros_msg.rs
src/models/test_definitions/: degradation.rs  mod.rs  speed.rs  test_definition.rs
src/services/: algorithm.rs  algorithm_run.rs  dataset.rs  error.rs  iteration.rs  metrics.rs  mod.rs  odometry.rs  stat.rs  test_definition.rs  test_execution.rs
src/utils/: evo_wrapper.rs  mod.rs  plots.rs
test/config/: params.yaml
test/config/LIO-SAM/: params.yaml
test/config/a-loam/: params.yaml
test/config/dlio/: params.yaml
test/config/dlo/: params.yaml
test/config/fast-lio/: params.yaml
test/config/faster-lio/: params.yaml
test/config/lio-sam/: params.yaml
test/config/lio-sam-6axis/: params.yaml
test/config/lvi-sam/: camera_params.yaml
test/config/point-lio/: params.yaml
test/config/sr-livo/: params.yaml
test/db/: 000013.sst  000016.sst  IDENTITY  MANIFEST-000018  OPTIONS-000012
test/evo/results/: APE_aligned.txt  APE_not_aligned.txt
