[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustle"
path = "src/lib.rs"

[[bin]]
name = "rustle_bin"
path = "src/main.rs"

[dependencies]
futures-util = "*"
bollard = "*"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7.10" }
log = { version = "0.4.20", features = ["std"] }
env_logger = { version = "0.11.2" }
thiserror = "1.0.57"

surrealdb = "1.2.2"
chrono = "0.4.35"
serde = "1.0.197"
