[package]
name = "rustle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustle"
path = "src/lib.rs"

[[bin]]
name = "rustle_bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
futures-util = "0.3.30"
bollard = "0.16.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7.10" }
log = { version = "0.4.20", features = ["std"] }
env_logger = { version = "0.11.2" }

thiserror = "1.0.57"
custom_error = "1.9.2"
num = "0.4.1"

surrealdb = { version = "1.3.0", features = ["kv-mem", "kv-rocksdb"] }
chrono = "0.4.35"
serde = "1.0.197"
temp-dir = "0.1.13"
struct_iterable = "0.1.1"
itertools = "*"

nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
