[package]
name = "rustle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustle_core"
path = "src/lib.rs"

[dependencies]
futures-util = "0.3.30"
bollard = "0.16.0" # Manage Docker
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7.10" }
log = { version = "0.4.20", features = ["std"] }
env_logger = { version = "0.11.2" }
yaml-rust2 ="*"
toml = "*"

thiserror = "1.0.57"
custom_error = "1.9.2"

surrealdb = { version = "*", features = ["kv-mem", "kv-rocksdb"] }
chrono = "0.4.35"
serde = "1.0.197"
serde_yaml = "*"
serde_json = "*"
serde_as = "*"

ulid = "*"

serde_with = "*"
directories = "6.0.0"
struct_iterable = "0.1.1"
itertools = "*"

nalgebra = { version = "0.32.4", features = ["serde-serialize"] }

charming = {version = "*", features = ["ssr"]}
rand = "*"
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }